# modu2geom

./: .gitignore  CMakeLists.txt  README.md  Todo.md  aaa.txt  con17.txt  con172.txt  con36-1.txt  main.cpp  paper.md  tmp.vtk
c36deform/: main  main.cpp  makefile  tmp.txt  tmp1.txt
modudata/vtk/: c36-1.vtk  c36.vtk
slim_opt/: main.cpp
src/: 0.vtk  1.vtk  2.vtk  3.vtk  4.vtk  5.vtk  6.vtk  7.vtk  CMakeLists.txt  OVMVtkHexIO.h  arapoperator.cpp  arapoperator.h  env.sh  findtoposeq.hpp  geommesh.h  main.cpp  makefile  msqoptimizer.cpp  msqoptimizer.h  my_scaf.cpp  my_scaf.h  mymesh.cpp  mymesh.h  myslim.cpp  myslim.h  ovmwrap.cpp  ovmwrap.h  ovmwrapper.h  ovmwrapper.impl  pipeline.md  printEigen.h  scafoperator.h  topo2geomsolver.h  topology.hpp  topomesh.h  utils.h
src/backup/1/: 11.vtk  13.vtk  4.vtk  7.vtk  9.vtk  tmp.vtk
src/backup/1_18/: 0.vtk  10.vtk  11.vtk  12.vtk  13.vtk  14.vtk  15.vtk  16.vtk  17.vtk  2.vtk  3.vtk  4.vtk  5.vtk  6.vtk  7.vtk  8.vtk  9.vtk  con18.txt
src/backup/2/: 10.vtk  12.vtk  14.vtk  15.vtk  2.vtk  3.vtk  5.vtk  6.vtk  8.vtk
src/backup/3/: 10.vtk  11.vtk  12.vtk  13.vtk  14.vtk  15.vtk  2.vtk  3.vtk  4.vtk  5.vtk  6.vtk  7.vtk  8.vtk  9.vtk
src/backup/36pyramid_no_boundary/: 0.vtk  1.vtk  10.vtk  11.vtk  12.vtk  13.vtk  14.vtk  15.vtk  16.vtk  17.vtk  18.vtk  19.vtk  2.vtk  20.vtk  21.vtk  22.vtk  23.vtk  24.vtk  25.vtk  26.vtk  27.vtk  28.vtk  29.vtk  3.vtk  30.vtk  31.vtk  32.vtk  33.vtk  34.vtk  35.vtk  4.vtk  5.vtk  6.vtk  7.vtk  8.vtk  9.vtk
src/backup/4/: 10.vtk  11.vtk  12.vtk  13.vtk  14.vtk  15.vtk  16.vtk  2.vtk  3.vtk  4.vtk  5.vtk  6.vtk  7.vtk  8.vtk  9.vtk  con171.txt
src/bkup/: my_scaf.cpp  my_scaf.h
tools/: transform_raw_to_topo.py
tools/hexvtkinv/: hexinv  main.cpp  makefile  out.vtk  out1.vtk  out2.vtk
tools/msqtest/: main.cpp  makefile  msqopt  msqopt.cpp  msqtest  out.vtk  out_my.vtk  tmp.vtk
tools/slim_opt/: main.cpp
