cmake_minimum_required(VERSION 3.10)

include_directories("${EIGEN_INCLUDE_DIR}")
include_directories("${IGL_INCLUDE_DIR}")
include_directories("${OVM_INCLUDE_DIR}")
include_directories("${TETGEN_INCLUDE_DIR}")
include_directories("${MESQUITE_INCLUDE_DIR}")
link_directories("${OVM_LIB_DIR}")
link_directories("${TETGEN_LIB_DIR}")
link_directories("${MESQUITE_LIB_DIR}")
file(GLOB_RECURSE CURRENT_HEADERS  *.h *.hpp)
source_group("Include" FILES ${CURRENT_HEADERS})
#aux_source_directory(. SRC_LIST)
add_executable(modu2geom main.cpp mymesh.cpp arapoperator.cpp msqoptimizer.cpp ${CURRENT_HEADERS})

target_link_libraries(modu2geom PUBLIC OpenVolumeMesh)
target_link_libraries(modu2geom PUBLIC tet)
target_link_libraries(modu2geom PUBLIC pthread)
target_link_libraries(modu2geom PUBLIC mesquite)